# lab3

./: .gitignore  TECHNICAL SPECIFICATION.md  package-lock.json  package.json  pyproject.toml  vite.config.js  zudoku.config.js
.github/workflows/: deploy-pages.yml
app/: __init__.py  main.py
openapi/: social_network_api.yaml
pages/: about.mdx  authorization.mdx  installation.mdx
scripts/: generate_sdk.py
sdk/social_network_client/: __init__.py
sdk/social_network_client/api/posts/: delete_posts_post_id.py  get_posts.py  get_posts_post_id.py  post_posts.py  put_posts_post_id.py
sdk/social_network_client/api/users/: delete_users_user_id.py  get_users.py  get_users_user_id.py  post_users.py  put_users_user_id.py
sdk/social_network_client/models/: __init__.py  error_message.py  post.py  post_create.py  post_update.py  user.py  user_create.py  user_update.py  validation_error.py  validation_error_detail_item.py
